--- a/source/accounts/templates/registration.html
+++ b/source/accounts/templates/registration.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>Регистрация</h1>
 
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% include 'partial/form.html' with button_text="зарегистрироваться" %}
 </form>
 {% endblock %}
