--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -22,6 +22,12 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'webapp:publication-list' %}">Главная</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'webapp:publication-create' %}">Добавить публикацию</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'accounts:search-users' %}">Поиск пользователей</a>
+                </li>
                 {% block menu %}{% endblock %}
             </ul>
 
