--- a/source/accounts/templates/user_detail.html
+++ b/source/accounts/templates/user_detail.html
@@ -6,12 +6,12 @@
 
 {% block menu %}
     {% if request.user == user_obj %}
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'accounts:profile_change' request.user.pk  %}">Изменить Профиль</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'accounts:password_change' request.user.pk %}">Смена пароля</a>
-    </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:profile_change' request.user.pk %}">Изменить Профиль</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:password_change' request.user.pk %}">Смена пароля</a>
+        </li>
     {% endif %}
 {% endblock %}
 
@@ -43,10 +43,22 @@
                     <p class="card-text">Количество публикаций: {{ user_obj.count_publications }}</p>
 
 
+                    <p class="card-text">Количество подписчиков: {{ user_obj.followers_count }}</p>
+                    <p class="card-text">Количество подписок: {{ user_obj.subscriptions_count }}</p>
+
+                    {% if request.user != user_obj %}
+                        <a href="{% url 'accounts:subscription' user_obj.pk %}">
+                            {% if request.user in user_obj.followers.all %}
+                                Отписаться
+                            {% else %}
+                                Подписаться
+                            {% endif %}
+                        </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
 
-{% include 'partial/publication_list.html' %}
+    {% include 'partial/publication_list.html' %}
 {% endblock %}
