--- a/source/webapp/templates/partial/publication_list.html
+++ b/source/webapp/templates/partial/publication_list.html
@@ -1,7 +1,7 @@
 <div class="mt-4">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1">
         {% for publication in publications %}
-            <div class="col">
+            <div class="col mb-3">
 
                 <div class="card">
                     <div class="card-header d-flex">
