--- a/source/webapp/templates/publication/list.html
+++ b/source/webapp/templates/publication/list.html
@@ -1,1 +1,7 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% block title %}Главная{% endblock %}
+
+{% block content %}
+
+{% include 'partial/publication_list.html' %}
+{% endblock %}
