--- a/source/webapp/templates/partial/publication_list.html
+++ b/source/webapp/templates/partial/publication_list.html
@@ -11,7 +11,14 @@
                     <img src="{{ publication.picture.url }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">{{ publication.description }}</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="{% url 'webapp:like-publication' publication.pk %}" class="btn btn-primary">
+                            {% if request.user in publication.users_liked.all %}
+                                Убрать лайк
+                            {% else %}
+                                Поставить лайк
+                            {% endif %}
+                           ({{ publication.likes_counter }})
+                        </a>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
