--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -22,9 +22,11 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'webapp:publication-list' %}">Главная</a>
                 </li>
+            {% if request.user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'webapp:publication-create' %}">Добавить публикацию</a>
                 </li>
+            {% endif %}
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'accounts:search-users' %}">Поиск пользователей</a>
                 </li>
@@ -45,7 +47,27 @@
     </div>
 </nav>
 
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-dismissible fade show {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+            alert-danger
+        {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+            alert-warning
+        {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+            alert-success
+        {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+            alert-primary
+        {% else %}
+            alert-secondary
+        {% endif %}" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+{% endif %}
+
 <div class="container mt-5">
+
     {% block content %}{% endblock %}
 </div>
 
